--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -43,11 +43,11 @@ on-run-end:
 
 vars:
   "dbt_date:time_zone": GMT
-  UPDATE_UDFS_AND_SPS: true
-  UPDATE_SNOWFLAKE_TAGS: True
+  UPDATE_UDFS_AND_SPS: false
+  UPDATE_SNOWFLAKE_TAGS: true
   STREAMLINE_INVOKE_STREAMS: False
   STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
   REST_API_ID_PROD: hn8uqhku77
   REST_API_ID_DEV: hn8uqhku77
-  API_INTEGRATION: AWS_LIVE_QUERY_DEV
+  API_INTEGRATION: AWS_LIVE_QUERY{{ '_DEV' if target.name != 'prod' else ''  }}
   AWS_REGION: us-east-1
