--- a/models/sources.yml
+++ b/models/sources.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: crosschain
-    database: "{{ 'crosschain' if target.database == 'LIVEQUERY' else 'crosschain_dev' }}"
+    database: "{{ 'crosschain' if target.database == 'REFERENCE' else 'crosschain_dev' }}"
     schema: core
     tables:
       - name: dim_date_hours
