--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,2 @@
-remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-minimal
 markdown: kramdown
