--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,2 @@
-remote_theme: pages-themes/tactile@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-minima
 markdown: GFM
