--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,11 @@ clean-targets: # directories to be removed by `dbt clean`
   - "dbt_modules"
   - "dbt_packages"
 
+models:
+  livequery_models:
+    deploy:
+      +materialized: ephemeral
+
 tests:
   +store_failures: true # all tests
 
@@ -45,6 +50,7 @@ vars:
   "dbt_date:time_zone": GMT
   UPDATE_MARKETPLACE_UDFS: false
   UPDATE_UDFS_AND_SPS: false
+  DROP_UDFS_AND_SPS: false
   UPDATE_SNOWFLAKE_TAGS: true
   STREAMLINE_INVOKE_STREAMS: False
   STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
