--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -13,7 +13,7 @@ profile: "livequery"
 # found in the "models/" directory. You probably won't need to change these!
 model-paths: ["models"]
 analysis-paths: ["analysis"]
-test-paths: ["tests"]
+# test-paths: ["tests"]
 seed-paths: ["data"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
@@ -28,6 +28,12 @@ models:
   livequery_models:
     deploy:
       +materialized: ephemeral
+      core:
+        +tags: core
+      evm:
+        +tags: evm
+      marketplace:
+        +tags: marketplace
 
 tests:
   +store_failures: true # all tests
