--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -7,7 +7,7 @@ on:
       - "main"
     inputs:
       environment:
-        type: choice 
+        type: choice
         description: DBT Run Environment
         required: true
         options:
@@ -15,9 +15,9 @@ on:
           - prod
         default: dev
       warehouse:
-        type: choice 
+        type: choice
         description: Snowflake warehouse
-        required: true 
+        required: true
         options:
           - DBT
           - DBT_CLOUD
@@ -27,7 +27,7 @@ on:
         type: string
         description: 'DBT Run Command'
         required: true
-    
+
 env:
   DBT_PROFILES_DIR: ./
 
@@ -46,7 +46,7 @@ concurrency:
 jobs:
   run_dbt_jobs:
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: workflow_${{ inputs.environment }}
 
     steps:
@@ -63,3 +63,9 @@ jobs:
       - name: Run DBT Jobs
         run: |
           ${{ inputs.dbt_command }}
+
+      - name: Store logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: dbt-logs
+          path: logs
