--- a/.github/workflows/dbt_docs_update.yml
+++ b/.github/workflows/dbt_docs_update.yml
@@ -24,15 +24,17 @@ jobs:
   scheduled_run:
     name: docs_update
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: workflow_prod
 
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.7.x"
+          python-version: "pypy3.10"
+          cache: "pip"
+
 
       - name: install dependencies
         run: |
@@ -41,7 +43,7 @@ jobs:
       - name: checkout docs branch
         run: |
           git checkout -b docs origin/main
-          
+
       - name: generate dbt docs
         run: dbt docs generate -t prod
 
