--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -50,9 +50,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.7.x"
+          python-version: "pypy3.10"
+          cache: "pip"
+
 
       - name: install dependencies
         run: |
