--- a/.github/workflows/dbt_docs_update.yml
+++ b/.github/workflows/dbt_docs_update.yml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: actions/setup-python@v3
         with:
-          python-version: "pypy3.10"
+          python-version: "3.10"
           cache: "pip"
 
 
