--- a/.github/workflows/dbt_docs_update.yml
+++ b/.github/workflows/dbt_docs_update.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: install dependencies
         run: |
-          pip install dbt-snowflake==${{ vars.DBT_VERSION }}
+          pip install -r requirements.txt
           dbt deps
       - name: checkout docs branch
         run: |
