--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: install dependencies
         run: |
+          pip install -r requirements.txt
           dbt deps
       - name: Run DBT Jobs
         run: |
