--- a/.github/workflows/dbt_run_dev_refresh.yml
+++ b/.github/workflows/dbt_run_dev_refresh.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: install dependencies
         run: |
+          pip install -r requirements.txt
           dbt deps
       - name: Run DBT Jobs
         run: |
