--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -62,7 +62,7 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          ${{ inputs.dbt_command }}
+          dbt --debug ${{ inputs.dbt_command }}
 
       - name: Store logs
         uses: actions/upload-artifact@v3
