--- a/models/deploy/core/utils.yml
+++ b/models/deploy/core/utils.yml
@@ -1,7 +1,7 @@
 models:
   - name: utils
     columns:
-      - name: utils.udf_json_rpc_call
+      - name: udf_json_rpc_call
         tests:
           - test_udf:
               args: "'foo', [], 1"
