- converted all of jim's test queries into formal tests

--- a/models/deploy/marketplace/alchemy/alchemy_nfts__alchemy_utils.yml
+++ b/models/deploy/marketplace/alchemy/alchemy_nfts__alchemy_utils.yml
@@ -134,6 +134,7 @@ models:
         tests:
           - test_marketplace_udf:
               config:
+                # we don't want to run this test in CI
                 enabled: false
               name: test_alchemy_nfts__report_spam_status_200
               args: null
