--- a/models/deploy/marketplace/alchemy/alchemy_transfers__alchemy_utils.yml
+++ b/models/deploy/marketplace/alchemy/alchemy_transfers__alchemy_utils.yml
@@ -2,15 +2,11 @@ version: 2
 models:
   - name: alchemy_transfers__alchemy_utils
     columns:
-      - name: udf_json_rpc_call
+      - name: get_asset_transfers
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
-                }
-
+          - test_marketplace_udf:
+              name: test_alchemy_transfers__get_asset_transfers_status_200
+              args: >
+                'eth-mainnet', [{'fromBlock': '0x0', 'toBlock': 'latest', 'toAddress': '0x5c43B1eD97e52d009611D89b74fA829FE4ac56b1', 'category': ['external'], 'withMetadata': True, 'excludeZeroValue': True}]
+              filter: :status_code
+              expected: 200
