--- a/models/deploy/marketplace/blockpour/blockpour_utils__.yml
+++ b/models/deploy/marketplace/blockpour/blockpour_utils__.yml
@@ -2,15 +2,29 @@ version: 2
 models:
   - name: blockpour_utils__
     columns:
-      - name: udf_json_rpc_call
+      - name: get
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
+          - test_marketplace_udf:
+              name: test_blockpour_utils__get_status_200
+              args: >
+                '/v1/tokens/1/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48', {
+                  'blockNumber': 17767007
                 }
 
+              filter: :status_code
+              expected: 200
+      - name: post
+        tests:
+          - test_marketplace_udf:
+              name: test_blockpour_utils__post_status_200
+              args: >
+                '/v1/model/run', {
+                  'slug': 'price.quote',
+                  'version': '1.0',
+                  'chainId': 1,
+                  'blockNumber': 17767016,
+                  'input': {}
+                }
+
+              filter: :status_code
+              expected: 200
