--- a/models/deploy/marketplace/credmark/credmark_utils__.yml
+++ b/models/deploy/marketplace/credmark/credmark_utils__.yml
@@ -2,15 +2,30 @@ version: 2
 models:
   - name: credmark_utils__
     columns:
-      - name: udf_json_rpc_call
+      - name: get
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
+          - test_marketplace_udf:
+              name: test_credmark_utils__get_status_200
+              args: >
+                '/v1/tokens/1/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
+                , {
+                'blockNumber': 17767007
                 }
 
+              filter: :status_code
+              expected: 200
+      - name: post
+        tests:
+          - test_marketplace_udf:
+              name: test_credmark_utils__post_status_200
+              args: >
+                '/v1/model/run'
+                , {
+                  'slug': 'aave-v2.account-info',
+                  'chainId': 1,
+                  'blockNumber': 17725466,
+                  'input': {'address': '0xf89a3799b90593317E0a1Eb74164fbc1755A297A'}
+                }
+
+              filter: :status_code
+              expected: 200
