--- a/models/deploy/marketplace/dapplooker/dapplooker__.yml
+++ b/models/deploy/marketplace/dapplooker/dapplooker__.yml
@@ -2,15 +2,12 @@ version: 2
 models:
   - name: dapplooker__
     columns:
-      - name: udf_json_rpc_call
+      - name: get_chart
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
-                }
+          - test_marketplace_udf:
+              name: test_dapplooker__get_chart_status_202
+              args: >
+                'a68cc6dd-1bc1-40ca-aaf8-b5155785f0b4'
 
+              filter: :status_code
+              expected: 202
