--- a/models/deploy/marketplace/helius/helius_apis__helius_utils.yml
+++ b/models/deploy/marketplace/helius/helius_apis__helius_utils.yml
@@ -2,15 +2,42 @@ version: 2
 models:
   - name: helius_apis__helius_utils
     columns:
-      - name: udf_json_rpc_call
+      - name: token_metadata
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
+          - test_marketplace_udf:
+              name: test_helius_apis__token_metadata_status_200
+              args: >
+                'mainnet'
+                , {
+                  'mintAccounts': [
+                    'BAAzgRGWY2v5AJBNZNFd2abiRXAUo56UxywKEjoCZW2',
+                    '8s6kQUZfdm7GSaThAcsmSs56wMinXrbk6SdNVngutrz5'
+                  ],
+                  'includeOffChain': true
                 }
 
+              filter: :status_code
+              expected: 200
+      - name: balances
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_apis__balances_status_200
+              args: >
+                'mainnet'
+                , '231B38ZpsbtrWbsBEjSXfjVj9JT2XyuNXy4f98V5NXxg'
+
+              filter: :status_code
+              expected: 200
+      - name: parse_transactions
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_apis__parse_transactions_status_200
+              args: >
+                'mainnet'
+                , [
+                  '5u5S6yWN5wJkEDr3hKeqF3Y8nWcyWaZDboEnpfUuAw1zcvbvevs58rEfCpN6VkfxaS4N8RCMkBcyhxBFs3eoL4U4',
+                  '2bWLiRSA8GCh7UNEpiZdgsh2BMxZwKawk8ND4Z3iWrqDZE6JQk69n9WoCU9rKDrgWHw6qV25g8UBMJYddRJRHR9v'
+                ]
+
+              filter: :status_code
+              expected: 200
