--- a/models/deploy/marketplace/helius/helius_das__helius_utils.yml
+++ b/models/deploy/marketplace/helius/helius_das__helius_utils.yml
@@ -2,15 +2,114 @@ version: 2
 models:
   - name: helius_das__helius_utils
     columns:
-      - name: udf_json_rpc_call
+      - name: get_asset
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
+          - test_marketplace_udf:
+              name: test_helius_das__get_asset_status_200
+              args: >
+                'mainnet'
+                , {
+                  'id': 'F9Lw3ki3hJ7PF9HQXsBzoY8GyE6sPoEZZdXJBsTTD2rk'
                 }
 
+              filter: :status_code
+              expected: 200
+      - name: get_signatures_for_asset
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__get_signatures_for_asset_status_200
+              args: >
+                'mainnet'
+                , {
+                  'id': 'FNt6A9Mfnqbwc1tY7uwAguKQ1JcpBrxmhczDgbdJy5AC',
+                  'page': 1, -- Starts at 1
+                  'limit': 1000 -- Limit 1000 per request.
+                }
+
+              filter: :status_code
+              expected: 200
+      - name: search_assets
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__search_assets_status_200
+              args: >
+                'mainnet'
+                , {
+                  'ownerAddress': '2k5AXX4guW9XwRQ1AKCpAuUqgWDpQpwFfpVFh3hnm2Ha',
+                  'compressed': true,
+                  'page': 1, -- Starts at 1
+                  'limit': 1000
+                }
+
+              filter: :status_code
+              expected: 200
+      - name: get_asset_proof
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__get_asset_proof_status_200
+              args: >
+                'mainnet'
+                , {
+                  'id': 'Bu1DEKeawy7txbnCEJE4BU3BKLXaNAKCYcHR4XhndGss'
+                }
+
+              filter: :status_code
+              expected: 200
+      - name: get_assets_by_owner
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__get_assets_by_owner_status_200
+              args: >
+                'mainnet'
+                , {
+                  'ownerAddress': '86xCnPeV69n6t3DnyGvkKobf9FdN2H9oiVDdaMpo2MMY',
+                  'page': 1, -- Starts at 1
+                  'limit': 1000
+                }
+
+              filter: :status_code
+              expected: 200
+      - name: get_assets_by_authority
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__get_assets_by_authority_status_200
+              args: >
+                'mainnet'
+                , {
+                  'authorityAddress': '2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW',
+                  'page': 1, -- Starts at 1
+                  'limit': 1000
+                }
+
+              filter: :status_code
+              expected: 200
+      - name: get_assets_by_creator
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__get_assets_by_creator_status_200
+              args: >
+                'mainnet'
+                , {
+                  'creatorAddress': 'D3XrkNZz6wx6cofot7Zohsf2KSsu2ArngNk8VqU9cTY3',
+                  'onlyVerified': true,
+                  'page': 1, -- Starts at 1
+                  'limit': 1000
+                }
+
+              filter: :status_code
+              expected: 200
+      - name: get_assets_by_group
+        tests:
+          - test_marketplace_udf:
+              name: test_helius_das__get_assets_by_group_status_200
+              args: >
+                'mainnet'
+                , {
+                  'groupKey': 'collection',
+                  'groupValue': 'J1S9H3QjnRtBbbuD4HjPV6RpRhwuk4zKbxsnCHuTgh9w',
+                  'page': 1,
+                  'limit': 1000
+                }
+
+              filter: :status_code
+              expected: 200
