--- a/models/deploy/marketplace/subquery/subquery__.yml
+++ b/models/deploy/marketplace/subquery/subquery__.yml
@@ -2,15 +2,13 @@ version: 2
 models:
   - name: subquery__
     columns:
-      - name: udf_json_rpc_call
+      - name: graphql
         tests:
-          - test_udf:
-              args: "'foo', [], 1"
-              expected: >
-                {
-                'jsonrpc': '2.0',
-                'method': 'foo',
-                'params': [],
-                'id': '1'
-                }
+          - test_marketplace_udf:
+              name: test_subquery__graphql_status_200
+              args: >
+                'kepler-network'
+                , {'query':'query { _mmrs (first: 5) { nodes { key } } }'}
 
+              filter: :status_code
+              expected: 200
